# discocal

./: CMakeLists.txt
include/: CCalibrator.h  CLieAlgebra.h  CMomentsTracker.h  CTargetDetector.h  mono.hpp  stereo.hpp
src/lib_calib/: CCalibrator.cpp  CLieAlgebra.cpp
src/lib_detect/: CMakeLists.txt  CTargetDetector.cpp
